Update and rename 10-DOM-projects-karaKrus-nameBox.html to index.html
added english game desc

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-  <title> DOM Projects
+  <title> Kara Krus
   </title>
 
   <link rel="stylesheet" href="10-DOM-projects-karaKrus-nameBox.css">
@@ -16,6 +16,7 @@
 <div class="karaKrus">
 
   <p class="karaKrusTitle">Kara Krus</p>
+  <p> (it's just heads or tails game </p>
 
   <button class="kara"
   onclick="
