Updat index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="karaKrus">
 
   <p class="karaKrusTitle">Kara Krus</p>
-  <p> (it's just heads or tails game </p>
+  <p> (it's just heads or tails game) </p>
 
   <button class="kara"
   onclick="
@@ -48,8 +48,12 @@
 
 </div>
 
+
+  
 <div class="textBox">
 
+  <p class="karaKrusTitle"> Who are you?</p>
+  
   <input placeholder="Name"
   class="nameBox"
   onkeydown="handleCostKeydown(event)">
