--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-  <title> Kara Krus
+  <title> DOM Projects
   </title>
 
   <link rel="stylesheet" href="10-DOM-projects-karaKrus-nameBox.css">
@@ -16,7 +16,6 @@
 <div class="karaKrus">
 
   <p class="karaKrusTitle">Kara Krus</p>
-  <p> (it's just heads or tails game) </p>
 
   <button class="kara"
   onclick="
@@ -48,12 +47,8 @@
 
 </div>
 
-
-  
 <div class="textBox">
 
-  <p class="karaKrusTitle"> Who are you?</p>
-  
   <input placeholder="Name"
   class="nameBox"
   onkeydown="handleCostKeydown(event)">
